--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main-login">
         <div class="left-login">
             <h1>Faça login<br>E comece já a fazer parte!</h1>
-            <img src="curiosity-search-animate (1).svg" class="imagem" alt="animação">
+            <a href="https://imgur.com/mDHqnEC"><img class="imagem" src="https://i.imgur.com/mDHqnEC.png" title="source: imgur.com" /></a>
         </div>
         <div class="right-login"></div>
         <div class="card-login">
