--- a/index.html
+++ b/index.html
@@ -4,35 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <title>Login</title>
 </head>
 <body>
     <div class="main-login">
         <div class="left-login">
-            <h1>Faça login<br>E comece já a fazer parte!</h1>
-            <a href="https://imgur.com/mDHqnEC"><img class="imagem" src="https://i.imgur.com/mDHqnEC.png" title="source: imgur.com" /></a>
+            <a href="https://imgur.com/mDHqnEC"><img class="imagem" src="https://i.imgur.com/mDHqnEC.png" title="source: imgur.com" data-aos="fade-right" /></a>
         </div>
         <div class="right-login"></div>
-        <div class="card-login">
-            <h1>LOGIN</h1>
+        <div class="card-login"  data-aos="fade-left">
+            <h1  data-aos="fade-down">LOGIN</h1>
             <div class="textfield">
-                <label for="usuario">Usuário</label>
+                <label for="usuario"  data-aos="fade-up">Usuário</label>
                 <input type="text" name="usuario" placeholder="Usuário">
             </div>
             <div class="textfield">
-                <label for="senha">Senha</label>
+                <label for="senha"  data-aos="fade-up">Senha</label>
                 <input type="password" name="senha" placeholder="Senha">
             </div>
             <div class="remember">
                 <label><input type="checkbox">Remember me</label>
                 <a href="#">Forgot password?</a>
             </div>
-            <button class="btn-login">Login</button>
+            <button class="btn-login"  data-aos="fade-down">Login</button>
 
             <div class="registrar">
                 <p>Don't have an account? <a href="#">Register</a></p>
             </div>
         </div>
     </div>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init({
+        duration: 2000,
+    });
+</script>
 </body>
 </html>
